# django-sitemonitor

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
sitemonitor/: views.py
sitemonitor/client/src/: styles.scss
sitemonitor/client/src/app/home/: home.component.ts  home.html
sitemonitor/client/src/app/settings/: settings.component.html  settings.component.scss  settings.component.ts  settings.module.ts
sitemonitor/client/src/app/settings/_components/edit/: edit-modal.component.html
sitemonitor/client/src/app/temp-chart/: temp-chart.component.ts
sitemonitor/static/sitemonitor/: 3rdpartylicenses.txt  main.2834077ff408fe203a71.js  styles.487c16d8815c269aefcc.css
sitemonitor/templates/sitemonitor/: index.html
sitemonitor/utils/: exceptions.py  monitor.py
