# setup.cfg
[metadata]
name = django-sitemonitor
version = 0.7.0
description = Django plugin to monitor site server stats.
long_description = file:README.rst
url = https://github.com/louisliv/django-sitemonitor
author = Your Name
author_email = yourname@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
    psutil>=5.8.0
    py-cpuinfo>=8.0.0
    djangorestframework>=3.12.4